# Iot24-network_1

./: .gitignore  CMakeLists.txt  README.md  client  client.cpp  client_4  client_4.cpp  multiple_clients.sh  robust_server.cpp  server  server.cpp  server_4  server_4.cpp  server_mutex.cpp  server_select.cpp  student_client  student_client.cpp  student_server  student_server.cpp
captures/: capture-20250507-132546.pcap
